Fixed whitespace underneath images

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ a {
 img {
     max-width: 100%;
     height: auto;
+    vertical-align: bottom;
     width: auto\9; /* ie8 */
 }
 
